fix overflow issue

--- a/styles-css/education.css
+++ b/styles-css/education.css
@@ -20,11 +20,10 @@
     display: grid;
     grid-gap: 5px;
     grid-auto-rows: 75vh;
+    overflow: auto;
     scrollbar-width: none; /* Firefox */
     -ms-overflow-style: none; /* Internet Explorer and Edge */
-    align-items: center;
-    border: 1px solid green;
-    overflow-y: scroll;
+    border: 1px solid none;
 }
 
 .education-space::-webkit-scrollbar {
@@ -35,7 +34,7 @@
     margin-top: 1vh;
     height: 350px;
     overflow-y: hidden;
-    border: 1px solid red;
+    border: 1px solid none;
 }
 
 .degree-space::-webkit-scrollbar {
